--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ravinio.github.io/chasingravens",
+  "homepage": "http://ravinio.github.io/",
   "name": "chasing-ravens",
   "version": "0.1.0",
   "private": true,
