--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "homepage": "/",
+  "homepage": ".",
   "name": "chasing-ravens",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.4.2",
