--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "marked": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "sass": "^1.56.2",
